crates/paladin-tui/tests/snapshots/view_snapshots__qr_export_modal_hotp.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 4548
expression: "render_to_text(&state, snapshot_now(), 80, 32)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Se┌ QR Export ───────────────────────────────────────────────────────────┐   │
│ ──│                             Bank:savings                             │── │
│ ▶ │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │               █▀▀▀▀▀█  ▀▀   █▀ █ ▀▄█ ▀▄ ▄▄█▄█▀▀ █▀▀▀▀▀█              │   │
│   │               █ ███ █ █  ▄ ██▄ ▀▀  █▀▄▀▄█▄█▄ █▀ █ ███ █              │   │
│   │               █ ▀▀▀ █ █  ▀▄▄ ▀ ▀█▀  ▀█▄ ▀▄▄█▀ █ █ ▀▀▀ █              │   │
│   │               ▀▀▀▀▀▀▀ █▄█▄█ ▀▄█ ▀ █▄█ █ ▀▄▀ ▀ █ ▀▀▀▀▀▀▀              │   │
│   │               ▀▄███▀▀▄▄▄█▄▄  ███▄▄▄▄▄▄▀▀  ████  █▀███▄▄              │   │
│   │               ▀▀██ ▄▀█  ▀▄ █  ▄▀▄▄▄▀▄▄▀▀▄█▄▀█▄ ▀▄ ▄█▀                │   │
│   │               █▄ █▀█▀▄██▀▀ ▄▄ █▀█ ▀ ▀▀▀█ ▀▄▄▄█▄▀▄█▄██▀█              │   │
│   │                 █ ▄█▀▀▄█ ▀███▀  ▀ ▀███▀▀██▄▀▀▄▄  ▀▄█▀ ▄              │   │
│   │               ▄▄ ▄▄█▀▄█ ▀█▄█▄▀▀▀█ ▄ ▄█▀▀█▀▄██▄▄ ▄█▄▀▀▀▄              │   │
│   │               ▀▀█ ▀▀▀ ▀ ▀▄█▄▀▀█ ▀   ▀ ▀▀ █▄▀  ▀█▄▀██▀▀▄              │   │
│   │               ▀▀██▄▀▀ ▄█   ▄▀▄▄▄▀█▄▀▀  █▄▄██ ▄▀▄▄█▄█▀█▄              │   │
│   │                                                                      │   │
│   │            ▶ Save as PNG… ◀     Save as SVG…       Done              │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │ WARNING: A QR code encodes the account secret. Anyone who sees or    │   │
│   │ photographs it can clone the OTP, so treat the displayed code and    │   │
│   │ any saved QR file like a plaintext export. HOTP exports encode the   │   │
│   │ current counter and do not advance it; scanning the QR into a second │   │
│   │ device keeps both devices in sync.                                   │   │
│   │                                                                      │   │
│ ──│         Tab cycles buttons  ·  Enter activates  ·  Esc close         │── │
│ [↑└──────────────────────────────────────────────────────────────────────┘   │
└──────────────────────────────────────────────────────────────────────────────┘
