crates/paladin-tui/tests/snapshots/view_snapshots__qr_export_modal_page2_hotp.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 32)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ Bank (savings) (#0)               ▸ press n to advance                     │
│   ┌ QR Export ───────────────────────────────────────────────────────────┐   │
│   │                             Bank:savings                             │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │               █▀▀▀▀▀█  ▀▀   █▀ █ ▀▄█ ▀▄ ▄▄█▄█▀▀ █▀▀▀▀▀█              │   │
│   │               █ ███ █ █  ▄ ██▄ ▀▀  █▀▄▀▄█▄█▄ █▀ █ ███ █              │   │
│   │               █ ▀▀▀ █ █  ▀▄▄ ▀ ▀█▀  ▀█▄ ▀▄▄█▀ █ █ ▀▀▀ █              │   │
│   │               ▀▀▀▀▀▀▀ █▄█▄█ ▀▄█ ▀ █▄█ █ ▀▄▀ ▀ █ ▀▀▀▀▀▀▀              │   │
│   │               ▀▄███▀▀▄▄▄█▄▄  ███▄▄▄▄▄▄▀▀  ████  █▀███▄▄              │   │
│   │               ▀▀██ ▄▀█  ▀▄ █  ▄▀▄▄▄▀▄▄▀▀▄█▄▀█▄ ▀▄ ▄█▀                │   │
│   │               █▄ █▀█▀▄██▀▀ ▄▄ █▀█ ▀ ▀▀▀█ ▀▄▄▄█▄▀▄█▄██▀█              │   │
│   │                 █ ▄█▀▀▄█ ▀███▀  ▀ ▀███▀▀██▄▀▀▄▄  ▀▄█▀ ▄              │   │
│   │               ▄▄ ▄▄█▀▄█ ▀█▄█▄▀▀▀█ ▄ ▄█▀▀█▀▄██▄▄ ▄█▄▀▀▀▄              │   │
│   │               ▀▀█ ▀▀▀ ▀ ▀▄█▄▀▀█ ▀   ▀ ▀▀ █▄▀  ▀█▄▀██▀▀▄              │   │
│   │               ▀▀██▄▀▀ ▄█   ▄▀▄▄▄▀█▄▀▀  █▄▄██ ▄▀▄▄█▄█▀█▄              │   │
│   │                                                                      │   │
│   │            ▶ Save as PNG… ◀     Save as SVG…       Done              │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │         Tab cycles buttons  ·  Enter activates  ·  Esc close         │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
