crates/paladin-tui/tests/snapshots/view_snapshots__qr_export_modal_save_destination_prompt.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 32)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│   ┌ QR Export ───────────────────────────────────────────────────────────┐   │
│   │                        GitHub:ben@example.com                        │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │             █▀▀▀▀▀█  ▄█▀ ▀▀█ ▀▀▀ █▄▄▄▀▄ ▀ ▀  ▄ ▄▀ █▀▀▀▀▀█            │   │
│   │             █ ███ █ ██▄█▄▀▀ ▄▄█▀▄▄▄██▀█  ██▄▀█ █▄ █ ███ █            │   │
│   │             █ ▀▀▀ █ █▀▀▀▄ █▀█ █▀█▀▀▀█▀▀▄▀█▀▀▄▄▀▀▀ █ ▀▀▀ █            │   │
│   │             ▀▀▀▀▀▀▀ █▄█ █ █ █▄█ █ ▀ █▄▀ █▄█▄█ █▄█ ▀▀▀▀▀▀▀            │   │
│   │             ▀ ▀█▀▀▀▄▄▀ █▀ ▄█▄▄█ ▀██▀██ ▄ ██▀ ▄▀▀▄▄▀▀▀█▀▄▄            │   │
│   │             ▀▄▄█▄█▀█▀▀█  ▄▄▄▄██▄▄▀ ▀ ▄▀█▀▄  █▀█ ▄██ ▄███▄            │   │
│   │              ▄▄ ██▀ ██▄ ▄ ▀█▀█▀▄██▀▀ █▀█ █▄▀▄ ▀▀▄▄▀  ▀▄▀█            │   │
│   │              ▀  ▄ ▀▄▀▀▄█  ▄█  █▄ ▄ ▀██▄█▄▄ ▄▄ ██▀ ▀▀█ █▀▄            │   │
│   │             ▀▄▄█ █▀ ▀▄▄█  ▄ ▄██▀▀ ▄███▀▄ █▄▀    ▄█▀ ▄▄▄█▄            │   │
│   │              ▀▄  ▀▀█ ▄█ █ █ █▄█▄██▀▀█▀▀ ▀▄█▀▄▀   █▀█▄▄█              │   │
│   │             ▀ ▄▀█▀▀▀█ █▀▄▄  ▀▄▀▀█▀▀▀█▀ ▄▄ █▀▄▀▀██▀▀▀█▄▄▀▄            │   │
│   │                                                                      │   │
│   │ ▶ Destination: [ /tmp/qr.png_ ]                                      │   │
│   │                                                                      │   │
│   │                         Confirm       Cancel                         │   │
│   │                                                                      │   │
│   │        Tab cycles fields  ·  Enter confirm  ·  Esc cancel save       │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
