crates/paladin-tui/tests/snapshots/view_snapshots__qr_export_modal_save_overwrite_gate.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 4591
expression: "render_to_text(&state, snapshot_now(), 80, 32)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Se┌ QR Export ───────────────────────────────────────────────────────────┐   │
│ ──│                        GitHub:ben@example.com                        │── │
│ ▶ │                                                                      │62 │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │             █▀▀▀▀▀█  ▄█▀ ▀▀█ ▀▀▀ █▄▄▄▀▄ ▀ ▀  ▄ ▄▀ █▀▀▀▀▀█            │   │
│   │             █ ███ █ ██▄█▄▀▀ ▄▄█▀▄▄▄██▀█  ██▄▀█ █▄ █ ███ █            │   │
│   │             █ ▀▀▀ █ █▀▀▀▄ █▀█ █▀█▀▀▀█▀▀▄▀█▀▀▄▄▀▀▀ █ ▀▀▀ █            │   │
│   │             ▀▀▀▀▀▀▀ █▄█ █ █ █▄█ █ ▀ █▄▀ █▄█▄█ █▄█ ▀▀▀▀▀▀▀            │   │
│   │             ▀ ▀█▀▀▀▄▄▀ █▀ ▄█▄▄█ ▀██▀██ ▄ ██▀ ▄▀▀▄▄▀▀▀█▀▄▄            │   │
│   │             ▀▄▄█▄█▀█▀▀█  ▄▄▄▄██▄▄▀ ▀ ▄▀█▀▄  █▀█ ▄██ ▄███▄            │   │
│   │              ▄▄ ██▀ ██▄ ▄ ▀█▀█▀▄██▀▀ █▀█ █▄▀▄ ▀▀▄▄▀  ▀▄▀█            │   │
│   │              ▀  ▄ ▀▄▀▀▄█  ▄█  █▄ ▄ ▀██▄█▄▄ ▄▄ ██▀ ▀▀█ █▀▄            │   │
│   │             ▀▄▄█ █▀ ▀▄▄█  ▄ ▄██▀▀ ▄███▀▄ █▄▀    ▄█▀ ▄▄▄█▄            │   │
│   │              ▀▄  ▀▀█ ▄█ █ █ █▄█▄██▀▀█▀▀ ▀▄█▀▄▀   █▀█▄▄█              │   │
│   │             ▀ ▄▀█▀▀▀█ █▀▄▄  ▀▄▀▀█▀▀▀█▀ ▄▄ █▀▄▀▀██▀▀▀█▄▄▀▄            │   │
│   │                                                                      │   │
│   │   Destination: [ /tmp/qr.png ]                                       │   │
│   │ ▶ [ ] Overwrite existing file                                        │   │
│   │                         Confirm       Cancel                         │   │
│   │          File exists — toggle the overwrite ack to confirm.          │   │
│   │ WARNING: A QR code encodes the account secret. Anyone who sees or    │   │
│   │ photographs it can clone the OTP, so treat the displayed code and    │   │
│   │ any saved QR file like a plaintext export. HOTP exports encode the   │   │
│   │ current counter and do not advance it; scanning the QR into a second │   │
│   │ device keeps both devices in sync.                                   │   │
│   │                                                                      │   │
│ ──│      Tab cycles fields  ·  Space toggles ack  ·  Esc cancel save     │── │
│ [↑└──────────────────────────────────────────────────────────────────────┘   │
└──────────────────────────────────────────────────────────────────────────────┘
